进行大量更新 新增： 增加新的软件信息参数 增加"功能测试"功能 优化： 将通知从下往上添加 删除部分主题 去除灰色通知遮罩 统一JOptionPane的图标样式 修改数据位置 优化通知显示 修复： 修复背景选择时，显示问题 测试： 将“更新界面”移至测试功能 增加更新翻译按钮（还未实现）